# aws-backtest-pipeline

./: .gitignore  Makefile  cdk.json  package-lock.json  package.json
.github/workflows/: build.yml
lib/: aws-data-etl-stack.ts
lib/constructs/: common_resources.ts
lib/constructs/backtests/: int_trades_ecs.ts  int_trades_lambda.ts
lib/constructs/data_collection/hyblock/: hyblock_lambda.ts  hyblock_liq_pipeline.ts
lib/constructs/data_collection/int_trades/: int_trades_data_pipeline.ts  test_int_trades_ecs.ts
lib/constructs/glue_jobs/: batch_processing.ts
src/backtest/: .gitignore  Dockerfile  Dockerfile.int_trades_bt  Makefile  dev.txt  pyproject.toml  requirements.txt
src/backtest/backtest_unit/backtester/framework/: framework.py  lazy_framework.py
src/backtest/backtest_unit/backtester/models/: accelerate.py  lazy_models.py  models.py
src/backtest/backtest_unit/backtester/optimization/: lazy_optimizer.py  optimizer.py
src/backtest/backtest_unit/backtester/shared/: heatmap_upload.py
src/backtest/backtest_unit/backtester/test/: eager_test.py  lazy_test.py  numba_test.py
src/backtest/backtest_unit/int_trades/: bt_ecs.py  bt_handler.py  handlers.py  test.py  utils.py
src/backtest/backtest_unit/shared/: backtest_utils.py  boto3.py
src/etl_pipeline/: .gitignore  Dockerfile  Dockerfile.int_trades_ecs  Makefile  README.md  dev.txt  example.json  pyproject.toml  requirements.txt  response_1761134755426.json  response_1761136505077.json  response_1761292702303.json
src/etl_pipeline/data_processing/glue_scripts/: batch_process_parquet.py
src/etl_pipeline/data_processing/hyblock_liq_heatmap/: check_parquet_data.py  client.py  concat_parquets_duckdb.py  db.py  dlq_handler.py  lambda_sqs_fetcher.py  lambdas.py  liq_heatmap_analysis.py  models.py  sqs_batch_upload.py  test_zip_data.py
src/etl_pipeline/data_processing/int_trades/: concat_parquets_handler.py  data_downloader.py  data_processor.py  ecs_task.py  filters.py  handlers.py  shared.py
src/etl_pipeline/data_processing/shared/: boto3.py  cache.py  logger.py  tables.py
test/: aws-data-etl.test.ts
